--- a/src/docs/Carts.yaml
+++ b/src/docs/Carts.yaml
@@ -487,14 +487,12 @@ paths:
         - Carts
       description: Create a cart at Mongo DB.Only users with "user" and "premium" roles can create a cart. Must login first.
       responses:
-        "200": # status code
+        "200":
           description: A JSON object of the created cart.
-          # content:
-          #   application/json:
-          #     schema:
-          #       type: array
-          #       items:
-          #         type: string
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/CreateCartResponse"
         "500":
           description: Internal server error.
           content:
@@ -656,3 +654,40 @@ components:
             __v:
               type: integer
               example: 49
+    CreateCartResponse:
+      type: object
+      properties:
+        message:
+          type: string
+        newCart:
+          type: object
+          properties:
+            _id:
+              type: string
+            products:
+              type: array
+              items:
+                type: object
+                properties:
+                  product:
+                    type: string
+                  quantity:
+                    type: integer
+                  _id:
+                    type: string
+            createdAt:
+              type: string
+              format: date-time
+            updatedAt:
+              type: string
+              format: date-time
+            __v:
+              type: integer
+      example:
+        message: "Cart created."
+        newCart:
+          _id: "66ac47ad6d6f773208e85f26"
+          products: []
+          createdAt: "2024-08-02T02:42:53.556Z"
+          updatedAt: "2024-08-02T02:42:53.556Z"
+          __v: 0
