--- a/src/docs/Carts.yaml
+++ b/src/docs/Carts.yaml
@@ -505,6 +505,8 @@ paths:
   /api/carts:
     post:
       summary: Create a cart at Mongo DB.
+      security:
+        -OAuth2: [user, premium]
       tags:
         - Carts
       description: Create a cart at Mongo DB.Only users with "user" and "premium" roles can create a cart. Must login first.
